Bug fix for footer overlapping with main content

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -4,6 +4,7 @@
 body
   display: flex
   padding: 0 150px
+  padding-bottom: 50px
   position: relative
   margin-top: 30px
   flex: 1
